2005-06-01 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to 2.6.12-rc5-mm2
	* info/patches/mm_patches/2.6.12-rc5-mm2: added

2005-05-31 David Brown <dmlb2000@excite.com>
	* PRE_BUILD: added the make oldconfig call if reconf is not true

2005-05-30 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to patch-2.6.11-ck9-server
	* info/patches/ck_server_patches/patch-2.6.11-ck9-server: added

2005-05-30 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to patch-2.6.11-ck9
	* info/patches/ck_patches/patch-2.6.11-ck9: added

2005-05-27 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to patch-2.6.11.11
	* info/patches/maintenance_patches/patch-2.6.11.11: added

2005-05-25 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to 2.6.12-rc5-mm1
	* info/patches/mm_patches/2.6.12-rc5-mm1: added

2005-05-25 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to patch-2.6.12-rc5
	* info/patches/PRE_2_6/patch-2.6.12-rc5: added

2005-05-23 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to patch-2.6.11-ck8
	* info/patches/ck_patches/patch-2.6.11-ck8: added
	* info/patches/ck_server_patches/*: added

2005-05-21 David Brown <dmlb2000@excite.com>
	* PREPARE: fixed config restore to apply to the kernel version you select
	* PRE_BUILD: added the copy of what ever config restore option you gave
	* info/patches/PRE_2_6/patch-2.6.11.*: moved to maintenance_patches
	* info/patches/maintenance_patches/patch-2.6.11.*: added from PRE_2_6
	* latest.defaults: added the LATEST_maintenance_patches var


2005-05-19 David Brown <dmlb2000@excite.com>
	* UPDATE_BOOTLOADER: added check for config file depending on what it is
	  also get root and boot devs from mount instead of /proc/mounts
	* FINAL: before running spit out *BIG* warning about the tmplt file

2005-05-18 David Brown <dmlb2000@excite.com>
	* latest.defaults: updated latest to patch-2.6.11.10