@@ -1,0 +1,5 @@
+patchversion="2.6.11.11-grsec"
+source="grsecurity-2.1.5-2.6.11.11-200505121617.patch.gz"
+source_url="http://download.sourcemage.org/distro/kernel/${source}"
+depends="patch-2.6.11.11"
+appliedkernels="2.6.11"
